--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^16.0.4",
     "@angular/platform-browser-dynamic": "^16.0.4",
     "@angular/router": "^16.0.4",
+    "@ngneat/transloco": "^4.2.2",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
     "firebase": "~9.9.3",
