--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap-icons": "^1.10.5",
     "firebase": "~9.9.3",
     "flag-icons": "^6.7.0",
+    "jwt-decode": "^3.1.2",
     "ng2-pdf-viewer": "^9.1.5",
     "rxjs": "~7.8.0",
     "tslib": "^2.5.3",
